--- a/AiCHAT-INTERLOCUTION/src/main/resources/application.yml
+++ b/AiCHAT-INTERLOCUTION/src/main/resources/application.yml
@@ -1,13 +1,11 @@
 server:
   port: 8230
+
+
 spring:
   ai:
-    openai:
-      # TODO: 上线更新环境变量
-      api-key:
-      base-url:
+    ollama:
+      base-url: http://localhost:11434  # Ollama 服务地址
       chat:
-        options:
-          model: deepseek-chat
-          temperature: 0.7
-          max-tokens: 120
+        model: deepseek-r1:32b
+        temperature: 0.7
