--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.ai.version>1.0.0</spring.ai.version>
+        <ollama.ai.version>1.0.0-M6</ollama.ai.version>
         <mybatis.version>3.0.0</mybatis.version>
         <jackson.version>2.18.3</jackson.version>
         <lombok.version>1.18.36</lombok.version>
@@ -35,10 +35,8 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-bom</artifactId>
-                <version>${spring.ai.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
+                <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
+                <version>${ollama.ai.version}</version>
             </dependency>
 
             <dependency>
